--- a/main.sass
+++ b/main.sass
@@ -9,20 +9,15 @@ $brand-light:  #E6F2FF
 
 
 
-
-
 // MIXINS
-
-
-
-
-
-
-
-
-
-
-
+=shaping($height, $width, $rad, $bg, $color)
+  height: $height
+  width: $width
+  -webkit-border-radius: $rad
+  -moz-border-radius: $rad
+  border-radius: $rad
+  background-color: $bg
+  color: $color
 
 
 
@@ -30,3 +25,16 @@ $brand-light:  #E6F2FF
 
 
 // STYLES
+body
+  background-color: $brand-light
+
+section
+  background: $brand-sub
+  color: $brand-dark
+  width:780px
+  margin: auto
+  padding: 20px
+  bprder-radius: 7px
+
+.thumb1
+  +shaping(120px, 120px, 10%, $brand-dark, $brand-light)
