--- a/main.sass
+++ b/main.sass
@@ -11,13 +11,13 @@ $brand-light:  #E6F2FF
 
 // MIXINS
 =shaping($height, $width, $rad, $bg, $color)
-  height: $height
-  width: $width
-  -webkit-border-radius: $rad
-  -moz-border-radius: $rad
-  border-radius: $rad
-  background-color: $bg
-  color: $color
+  height:                    $height
+  width:                     $width
+  -webkit-border-radius:     $rad
+  -moz-border-radius:        $rad
+  border-radius:             $rad
+  background-color:          $bg
+  color:                     $color
 
 
 
@@ -28,13 +28,21 @@ $brand-light:  #E6F2FF
 body
   background-color: $brand-light
 
+h1
+  text-align: center
+  padding-top: 20px
+
+
 section
   background: $brand-sub
   color: $brand-dark
-  width:780px
+  width: 780px
   margin: auto
   padding: 20px
-  bprder-radius: 7px
+  border-radius: 7px
+  position: relative
+  z-index: -2
 
 .thumb1
   +shaping(120px, 120px, 10%, $brand-dark, $brand-light)
+  margin: 0 435px -90px
