--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,20 @@ body {
   background-color: #E6F2FF;
 }
 
+h1 {
+  text-align: center;
+  padding-top: 20px;
+}
+
 section {
   background: #CC66FF;
   color: #333;
   width: 780px;
   margin: auto;
   padding: 20px;
-  bprder-radius: 7px;
+  border-radius: 7px;
+  position: relative;
+  z-index: -2;
 }
 
 .thumb1 {
@@ -19,6 +26,18 @@ section {
   border-radius: 10%;
   background-color: #333;
   color: #E6F2FF;
+  margin: 0 435px -90px;
+}
+
+.thumb2 {
+  height: 100px;
+  width: 100px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  background-color: #CC66FF;
+  color: #CC66FF;
+  margin: -50px 1310px;
 }
 
 /*# sourceMappingURL=styles.css.map */
