--- a/main.sass
+++ b/main.sass
@@ -60,3 +60,6 @@ section
 .thumb2
   +shaping(100px, 100px, 50%, $brand-sub, $brand-sub)
   margin: -50px 1310px
+
+.btn-1
+  +btn-main(15px 20px, 7px, $brand-main, white)
