--- a/styles.css
+++ b/styles.css
@@ -51,5 +51,27 @@ section {
   display: block;
   margin: auto;
 }
+.btn-1:hover {
+  background-color: #9933ff;
+}
+
+.btn-2 {
+  padding: 30px;
+  border-radius: 50%;
+  background-color: #333;
+  color: white;
+  border-width: 0;
+  border-style: none;
+  cursor: pointer;
+  display: block;
+  margin: auto;
+  font-size: 2rem;
+}
+.btn-2:hover {
+  background-color: #9933ff;
+}
+.btn-2:hover {
+  background-color: #4d0099;
+}
 
 /*# sourceMappingURL=styles.css.map */
